aap-product-docs-plaintext/red_hat_content/documentation/red_hat_ansible_automation_platform/2.6/using_automation_execution/controller-edit-nodes.md
# 8. Workflow job templates
## 8.7. Workflow visualizer
### 8.7.4. Editing a node

Learn how to edit a node’s details or link edge type (Run on success/fail/always) and remove links within a workflow, and how to adjust the workflow diagram’s view.

**Procedure**

- Edit a node by using one of these methods:


- If you want to edit a node, click the icon of the node. The pane displays the current selections, click Edit to change these. Make your changes and click Finish to apply them to the graphical view.
- To edit the edge type for an existing link, (**Run on success**, **Run on fail**, **Run always**), click ( ![Plus icon](https://access.redhat.com/webassets/avalon/d/Red_Hat_Ansible_Automation_Platform-2.6-Using_automation_execution-en-US/images/65fed3eab4f6ac2075ffa1b3caa55e46/options_menu.png) ) on the existing status.
- To remove a link, click ( ![Plus icon](https://access.redhat.com/webassets/avalon/d/Red_Hat_Ansible_Automation_Platform-2.6-Using_automation_execution-en-US/images/65fed3eab4f6ac2075ffa1b3caa55e46/options_menu.png) ) for the link and click Remove link. This option only appears in the pane if the target or child node has more than one parent. All nodes must be linked to at least one other node at all times so you must create a new link before removing an old one.

- Edit the view of the workflow diagram by using one of these methods:


- Click the examine icon ( ![Examine icon 15](https://access.redhat.com/webassets/avalon/d/Red_Hat_Ansible_Automation_Platform-2.6-Using_automation_execution-en-US/images/4e440067d24ca0b7a2a91901d3b3778f/examine.png) ) to zoom in, the reduce icon ( ![Reduce icon 15](https://access.redhat.com/webassets/avalon/d/Red_Hat_Ansible_Automation_Platform-2.6-Using_automation_execution-en-US/images/a869019c522e92f9e0b2274236ad130d/reduce.png) ) to zoom out, the expand icon ( ![Expand icon 15](https://access.redhat.com/webassets/avalon/d/Red_Hat_Ansible_Automation_Platform-2.6-Using_automation_execution-en-US/images/bf7534829ee13dfb84e75b5772eff8b0/expand.png) ) to fit to screen or the reset icon ( ![Reset icon 15](https://access.redhat.com/webassets/avalon/d/Red_Hat_Ansible_Automation_Platform-2.6-Using_automation_execution-en-US/images/bf3f8223a6edfa7d88bd7ff95e57f7cc/reset.png) ) to reposition the view.
- Drag the workflow diagram to reposition it on the screen or use the scroll on your mouse to zoom.

